Star-Share Camera Empty Image Overflow Fix

--- a/app/components/telescope-details/star-share-camera/star-share-camera.scss
+++ b/app/components/telescope-details/star-share-camera/star-share-camera.scss
@@ -61,7 +61,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 4px $gainsboro;
-  width: 80px;
+  width: 65px;
   height: 50px;
   outline: 0;
   border: none;
